--- a/Jonas-General-Purpose-Shop-SpringBoot-main/Admin/src/main/resources/application.properties
+++ b/Jonas-General-Purpose-Shop-SpringBoot-main/Admin/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3307/ytr?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=@Root1
+spring.datasource.password=User@123
 server.port=8081
+#server.address=13.60.157.227
 
 #multipart-file
 spring.servlet.multipart.enabled= true
